--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server"
+    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server",
+    "typeorm": "ts-node-dev node_modules/typeorm/cli.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.31"
   },
