--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "express-async-errors": "^3.1.1",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.31"
+    "typeorm": "^0.2.31",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/uuid": "^8.3.0",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.3"
   }
