--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server",
-    "typeorm": "ts-node-dev node_modules/typeorm/cli.js"
+    "dev": "ts-node-dev -r tsconfig-paths/register --transpile-only --ignore-watch node_modules src/server",
+    "typeorm": "ts-node-dev -r tsconfig-paths/register node_modules/typeorm/cli.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -28,6 +28,7 @@
     "@types/jsonwebtoken": "^8.5.1",
     "@types/uuid": "^8.3.0",
     "ts-node-dev": "^1.1.6",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^4.2.3"
   }
 }
