adicionando funcionalidades no recovery

--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@types/nodemailer": "^6.4.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.5.0",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.5.0",
     "typeorm": "^0.2.31",
