--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
+    "mercadopago": "^1.5.6",
     "mysql": "^2.18.1",
     "nodemailer": "^6.5.0",
     "reflect-metadata": "^0.1.13",
@@ -34,6 +35,7 @@
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/jsonwebtoken": "^8.5.1",
+    "@types/mercadopago": "^1.5.3",
     "@types/uuid": "^8.3.0",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.4",
