--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
     "mercadopago": "^1.5.6",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "nodemailer": "^6.5.0",
     "reflect-metadata": "^0.1.13",
@@ -34,6 +35,7 @@
     "@types/jest": "^26.0.22",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/mercadopago": "^1.5.3",
+    "@types/multer": "^1.4.5",
     "@types/nodemailer": "^6.4.1",
     "@types/uuid": "^8.3.0",
     "jest": "^26.6.3",
