--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
+    "mercadopago": "^1.5.7",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "nodemailer": "^6.5.0",
+    "pagseguro": "^0.1.0",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.5.0",
     "typeorm": "^0.2.31",
@@ -35,6 +37,7 @@
     "@types/hapi__joi": "^17.1.6",
     "@types/jest": "^26.0.22",
     "@types/jsonwebtoken": "^8.5.1",
+    "@types/mercadopago": "^1.5.3",
     "@types/multer": "^1.4.5",
     "@types/nodemailer": "^6.4.1",
     "@types/uuid": "^8.3.0",
